fix: image visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body {
     background-color: #F0F4F5;
-    /*height: 100vh;*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 
